--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "Semana Omni Stack 11",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "test": "jest"
   },
   "keywords": [
     "Node.js",
@@ -15,8 +16,10 @@
   "author": "Lorran Sutter",
   "license": "ISC",
   "dependencies": {
+    "celebrate": "^12.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jest": "^25.2.3",
     "knex": "^0.20.13",
     "sqlite3": "^4.1.1"
   },
