--- a/backend/package.json
+++ b/backend/package.json
@@ -4,26 +4,32 @@
   "description": "Semana Omni Stack 11",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
-    "test": "jest"
+    "start": "nodemon src/server.js",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "keywords": [
     "Node.js",
     "ReactJS",
     "ReactNative",
-    "Express"
+    "Express",
+    "SQLite3",
+    "Axios",
+    "Jest",
+    "Celebrate"
   ],
   "author": "Lorran Sutter",
   "license": "ISC",
   "dependencies": {
     "celebrate": "^12.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
-    "jest": "^25.2.3",
     "knex": "^0.20.13",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "jest": "^25.2.3",
+    "supertest": "^4.0.2"
   }
 }
